# BitsChess

./: Cargo.toml  README.md  differenciate.py
.github/workflows/: run-test.yml
src/: board_helper.rs  chess_move.rs  lib.rs  main.rs  piece.rs
src/bitschess/: bitboard.rs  board.rs  board_helper.rs  chessmove.rs  mod.rs  piece.rs
src/bitschess/board/: fen.rs  magics.rs  move_generation.rs  perft.rs  pgn.rs  repetition_table.rs  zobrist.rs
src/chessboard/: bitboard.rs  board.rs  board_helper.rs  chessmove.rs  piece.rs
src/chessboard/board/: fen.rs  magics.rs  move_generation.rs  perft.rs  pgn.rs  repetition_table.rs  zobrist.rs
