[package]
name = "bitschess"
version = "0.1.0"
edition = "2021"
authors = ["Miklas Karjalainen <miklas.karjalainen@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[lib]
name = "bitschess"
path = "src/lib.rs"

[[bin]]
name = "bitschess-bin"
path = "src/main.rs"
